--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -8,49 +8,53 @@
 </head>
 
 <body>
-	<nav>
-		<a href="#">Work</a> | 
-		<a href="#">About</a> | 
-		<a href="mailto:gujin92@gmail.com">Contact</a>
-	</nav>
-
-	<h1>Cassandra Gu</h1>
-
-	<p class="intro"> Graphic design enthusiast | Techno beats lover | Third culture kid </p>
-
-	<hr>
-
-	<p>Currently making beautiful visuals @ <a href="http://efsharp.com/">F Sharp</a> + learning UX &amp; web design @ <a href="https://generalassemb.ly/">GA</a></p>
+	<div class="wrapper">
+		<nav>
+			<a href="#">Work</a> | 
+			<a href="#">About</a> | 
+			<a href="mailto:gujin92@gmail.com">Contact</a>
+		</nav>
 	
-	<img class="preview" src="images/intro1.png" alt="Intro Pic">
-	<img class="preview" src="images/intro2.png" alt="Intro Pic">
-
-	<section>
-		<h3>Richard Avedon Exhibit Catalogue</h3>
-		<img src="images/avedon_catalogue_1.jpg" alt="Avedon Catalogue 1">
-		<img src="images/avedon_catalogue_2.jpg" alt="Avedon Catalogue 2">
-		<img src="images/avedon_catalogue_3.jpg" alt="Avedon Catalogue 3">
-		<img src="images/avedon_catalogue_4.jpg" alt="Avedon Catalogue 4">
-		<img src="images/avedon_catalogue_5.jpg" alt="Avedon Catalogue 5">
-		<img src="images/avedon_catalogue_6.jpg" alt="Avedon Catalogue 6">
-		<img src="images/avedon_catalogue_7.jpg" alt="Avedon Catalogue 7">
-	</section>
-
-	<section>
-		<h3>“Millennial Communism” Memes</h3>
-		<img src="images/millenial_communism_memes_1.jpg" alt="Millenial Comminism Memes 1">
-		<img src="images/millenial_communism_memes_2.jpg" alt="Millenial Comminism Memes 2">
-		<img src="images/millenial_communism_memes_3.jpg" alt="Millenial Comminism Memes 3">
-		<img src="images/millenial_communism_memes_4.jpg" alt="Millenial Comminism Memes 4">
-		<img src="images/millenial_communism_memes_5.jpg" alt="Millenial Comminism Memes 5">
-		<img src="images/millenial_communism_memes_6.jpg" alt="Millenial Comminism Memes 6">
-	</section>
-
-	<p id="slogan">“Creativity is the<br>greatest rebellion<br>in existence.”<br>- Oslo</p>
-
-	<p><a href="cassandragu.github.io/unit_4/index.html"> Back to Top ↑</a></p>
-
-	<p>Copyright © 2016 Cassandra Gu All Rights Reserved.</p>
-
+		<h1>Cassandra Gu</h1>
+	
+		<p class="intro"> Graphic design enthusiast | Techno beats lover | Third culture kid </p>
+	
+		<hr>
+	
+		<p>Currently making beautiful visuals @ <a href="http://efsharp.com/">F Sharp</a> + learning UX &amp; web design @ <a href="https://generalassemb.ly/">GA</a></p>
+		
+		<img class="preview" src="images/intro1.png" alt="Intro Pic">
+		<img class="preview" src="images/intro2.png" alt="Intro Pic">
+	
+		<section>
+			<h2>Richard Avedon Exhibit Catalogue</h2>
+			<img src="images/avedon_catalogue_1.jpg" alt="Avedon Catalogue 1">
+			<img src="images/avedon_catalogue_2.jpg" alt="Avedon Catalogue 2">
+			<img src="images/avedon_catalogue_3.jpg" alt="Avedon Catalogue 3">
+			<img src="images/avedon_catalogue_4.jpg" alt="Avedon Catalogue 4">
+			<img src="images/avedon_catalogue_5.jpg" alt="Avedon Catalogue 5">
+			<img src="images/avedon_catalogue_6.jpg" alt="Avedon Catalogue 6">
+			<img src="images/avedon_catalogue_7.jpg" alt="Avedon Catalogue 7">
+		</section>
+	
+		<section>
+			<h2>“Millennial Communism” Memes</h2>
+			<img src="images/millenial_communism_memes_1.jpg" alt="Millenial Comminism Memes 1">
+			<img src="images/millenial_communism_memes_2.jpg" alt="Millenial Comminism Memes 2">
+			<img src="images/millenial_communism_memes_3.jpg" alt="Millenial Comminism Memes 3">
+			<img src="images/millenial_communism_memes_4.jpg" alt="Millenial Comminism Memes 4">
+			<img src="images/millenial_communism_memes_5.jpg" alt="Millenial Comminism Memes 5">
+			<img src="images/millenial_communism_memes_6.jpg" alt="Millenial Comminism Memes 6">
+		</section>
+		<blockquote id="slogan">
+			<p>“Creativity is the greatest rebellion in existence.”</p>
+			<br>
+			<cite>- Oslo</cite>
+		</blockquote>
+		<footer>
+			<a href="cassandragu.github.io/unit_4/index.html"> Back to Top ↑</a>
+			<p>Copyright © 2016 Cassandra Gu All Rights Reserved.</p>
+		</footer>
+	</div>
 </body>
 </html>
