--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -23,10 +23,10 @@
 	
 		<p>Currently making beautiful visuals @ <a href="http://efsharp.com/">F Sharp</a> + learning UX &amp; web design @ <a href="https://generalassemb.ly/">GA</a></p>
 		
-		<img class="preview" src="images/intro1.png" alt="Intro Pic">
-		<img class="preview" src="images/intro2.png" alt="Intro Pic">
+		<a href="#project1"><img class="preview" src="images/intro1.png" alt="Intro Pic"></a>
+		<a href="#project2"><img class="preview" src="images/intro2.png" alt="Intro Pic"></a>
 	
-		<section>
+		<section id="project1">
 			<h2>Richard Avedon Exhibit Catalogue</h2>
 			<img src="images/avedon_catalogue_1.jpg" alt="Avedon Catalogue 1">
 			<img src="images/avedon_catalogue_2.jpg" alt="Avedon Catalogue 2">
@@ -37,7 +37,7 @@
 			<img src="images/avedon_catalogue_7.jpg" alt="Avedon Catalogue 7">
 		</section>
 	
-		<section>
+		<section id="project2">
 			<h2>“Millennial Communism” Memes</h2>
 			<img src="images/millenial_communism_memes_1.jpg" alt="Millenial Comminism Memes 1">
 			<img src="images/millenial_communism_memes_2.jpg" alt="Millenial Comminism Memes 2">
@@ -47,12 +47,11 @@
 			<img src="images/millenial_communism_memes_6.jpg" alt="Millenial Comminism Memes 6">
 		</section>
 		<blockquote id="slogan">
-			<p>“Creativity is the greatest rebellion in existence.”</p>
-			<br>
+			<p>“Creativity is the greatest rebellion in existence.”</p><br>
 			<cite>- Oslo</cite>
 		</blockquote>
 		<footer>
-			<a href="cassandragu.github.io/unit_4/index.html"> Back to Top ↑</a>
+			<a href="index.html"> Back to Top ↑</a>
 			<p>Copyright © 2016 Cassandra Gu All Rights Reserved.</p>
 		</footer>
 	</div>
