--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -18,16 +18,12 @@
 		<h1>Cassandra Gu</h1>
 	
 		<p class="intro"> Graphic design enthusiast | Techno beats lover | Third culture kid </p>
-	
-		<hr>
-	
-		<p>Currently making beautiful visuals @ <a href="http://efsharp.com/">F Sharp</a> + learning UX &amp; web design @ <a href="https://generalassemb.ly/">GA</a></p>
 		
-		<a href="#project1"><img class="preview" src="images/intro1.png" alt="Intro Pic"></a>
-		<a href="#project2"><img class="preview" src="images/intro2.png" alt="Intro Pic"></a>
+		<a href="#project1"><img class="preview" src="images/preview1.jpg" alt="preview1" title="CHECK OUT MY ART CATELOGUE PROJECT"></a>
+		<a href="#project2"><img class="preview" src="images/preview2.jpg" alt="preview2" title="CHECK OUT MY INTERNET MEME PROJECT"></a>
 	
 		<section id="project1">
-			<h2>Richard Avedon Exhibit Catalogue</h2>
+			<h2>| Richard Avedon Exhibit Catalogue |</h2>
 			<img src="images/avedon_catalogue_1.jpg" alt="Avedon Catalogue 1">
 			<img src="images/avedon_catalogue_2.jpg" alt="Avedon Catalogue 2">
 			<img src="images/avedon_catalogue_3.jpg" alt="Avedon Catalogue 3">
@@ -38,7 +34,7 @@
 		</section>
 	
 		<section id="project2">
-			<h2>“Millennial Communism” Memes</h2>
+			<h2>| “Millennial Communism” Memes |</h2>
 			<img src="images/millenial_communism_memes_1.jpg" alt="Millenial Comminism Memes 1">
 			<img src="images/millenial_communism_memes_2.jpg" alt="Millenial Comminism Memes 2">
 			<img src="images/millenial_communism_memes_3.jpg" alt="Millenial Comminism Memes 3">
@@ -47,7 +43,7 @@
 			<img src="images/millenial_communism_memes_6.jpg" alt="Millenial Comminism Memes 6">
 		</section>
 		<blockquote id="slogan">
-			<p>“Creativity is the greatest rebellion in existence.”</p><br>
+			<p>“Creativity is the greatest rebellion<br>in existence.”</p><br>
 			<cite>- Oslo</cite>
 		</blockquote>
 		<footer>
