--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -44,7 +44,7 @@
 		</section>
 
 		<article class="clearfix" id="about">
-			<img src="images/profile.jpg" alt="Profile Pic">
+			<img src="images/profilepic.jpg" alt="Profile Pic">
 
 			<p><em>What can she do for you?</em><br>| Brand Identity Design<br>| UX/UI Design<br>| Web Design</p>
 
