--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -44,17 +44,23 @@
 		</section>
 
 		<article class="clearfix" id="about">
-			<img src="images/profilepic.jpg" alt="Profile Pic">
+			<div class="col-2">
+				<img src="images/profilepic.jpg" alt="Profile Pic">
+			</div>
 
-			<p><em>What can she do for you?</em><br>| Brand Identity Design<br>| UX/UI Design<br>| Web Design</p>
+			<div class="col-2">
+				<p><em>What can she do for you?</em><br>| Brand Identity Design<br>| UX/UI Design<br>| Web Design</p>
 
-			<p><em>What is she up to lately?</em><br>| Making user interface visuals for digital music advertising campaigns @ F Sharp.<br>| Learning UX and web design @ General Assembly.</p>
+				<p><em>What is she up to lately?</em><br>| Making user interface visuals for digital music advertising campaigns @ F Sharp.<br>| Learning UX and web design @ General Assembly.</p>
 
-			<p><em>What is her passion?</em><br>| Gentle rebellion by adding beauty to this world, one step at a time.</p>
+				<p><em>What is her passion?</em><br>| Gentle rebellion by adding beauty to this world, one step at a time.</p>
+				
+				<p><em>What is trending on her playlist?</em><br>| "99.9%" by Kaytranada and "NO REALITY" by Nosaj Thing.</p>
+
+				<p><em>What are some of her infatuations?</em><br>| Geometric designs. Typography. Llamas &amp; Alpacas. Documentaries. Desserts.</p>
+			</div>
+
 			
-			<p><em>What is trending on her playlist?</em><br>| "99.9%" by Kaytranada and "NO REALITY" by Nosaj Thing.</p>
-
-			<p><em>What are some of her infatuations?</em><br>| Geometric designs. Typography. Llamas &amp; Alpacas. Documentaries. Desserts.</p>
 		</article>
 
 		<blockquote id="slogan">
