--- a/unit_7/index.html
+++ b/unit_7/index.html
@@ -71,7 +71,7 @@
 			<p>Copyright © 2016 Cassandra Gu All Rights Reserved.</p>
 		</footer>
 
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 
 		<script>
 		$('a[href*=#]:not([href=#])').click(function() {
