--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -11,15 +11,26 @@
 <body>
 	<div class="wrapper">
 		<nav id="navigation">
-			<a href="#">Work</a> | 
-			<a href="#about">About</a> | 
-			<a href="mailto:gujin92@gmail.com">Contact</a>
+			<a href="#">| Work |</a> 
+			<a href="#about">| About |</a>
+			<a href="mailto:gujin92@gmail.com">| Contact |</a>
 		</nav>
 	
 		<h1>Cassandra Gu</h1>
 	
-		<p class="intro"> Graphic design enthusiast | Techno beats lover | Third culture kid </p>
-		
+		<p class="intro"> Design Thinker | Pixel Pusher | Wonder Seeker </p>
+		<div class="intro-small"> 
+			<p>
+				| Design Thinker |
+			</p>
+			<p>
+				| Pixel Pusher |
+			</p>
+			<p>
+				| Wonder Seeker |
+			</p>
+		</div>
+			
 		<a href="#project1"><img class="preview" src="images/preview1.jpg" alt="preview1" title="CHECK OUT MY ART CATELOGUE PROJECT"></a>
 		<a href="#project2"><img class="preview" src="images/preview2.jpg" alt="preview2" title="CHECK OUT MY INTERNET MEME PROJECT"></a>
 	
@@ -46,10 +57,6 @@
 
 		<article class="clearfix" id="about">
 			<div class="col-2">
-				<img src="images/profilepic.jpg" alt="Profile Pic">
-			</div>
-
-			<div class="col-2">
 				<p><em>What can she do for you?</em><br>| Brand Identity Design<br>| UX/UI Design<br>| Web Design</p>
 
 				<p><em>What is she up to lately?</em><br>| Making user interface visuals for digital music advertising campaigns @ F Sharp.<br>| Learning UX and web design @ General Assembly.</p>
@@ -59,11 +66,15 @@
 				<p><em>What is trending on her playlist?</em><br>| "99.9%" by Kaytranada and "NO REALITY" by Nosaj Thing.</p>
 
 				<p><em>What are some of her infatuations?</em><br>| Geometric designs. Typography. Llamas &amp; Alpacas. Documentaries. Desserts.</p>
-			</div>		
+			</div>
+
+			<div class="col-2">
+				<img src="images/profilepic.jpg" alt="Profile Pic">
+			</div>
 		</article>
 
 		<blockquote id="slogan">
-			<p>“Creativity is the greatest rebellion<br>in existence.”</p><br>
+			Creativity is the greatest rebellion in existence.
 			<cite>- Oslo</cite>
 		</blockquote>
 
